<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversationActivity">

    <ImageButton
        android:id="@+id/backConversationMenuImgButton"
        android:layout_width="@dimen/back_button_size"
        android:layout_height="@dimen/back_button_size"
        android:layout_margin="@dimen/back_button_margin"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/back_b_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="Conversation"
            android:textColor="@color/dark_blue"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerVertical="true"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/conversation_menu_left_margin"
                android:text="ALL CONVERSATION" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="always"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <!--Patient Interview-->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/conversation_menu_left_margin"
                        android:background="@drawable/round_outline"
                        android:outlineProvider="background">

                        <ImageView
                            android:id="@+id/patientInterviewImageView"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_outline"
                            android:clickable="true"
                            android:outlineProvider="background"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_patient_interview"
                            android:translationZ="3dp" />

                        <TextView
                            android:shadowColor="@color/text_shadow"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/patientInterviewImageView"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="15dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/patient_interview"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:translationZ="5dp" />

                    </RelativeLayout>

                    <!--Take A Vital sign-->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/conversation_menu_left_margin"
                        android:background="@drawable/round_outline"
                        android:outlineProvider="background">

                        <ImageView
                            android:id="@+id/takeAVitalImageView"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_outline"
                            android:clickable="true"
                            android:outlineProvider="background"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_take_a_vital"
                            android:translationZ="3dp" />

                        <TextView
                            android:shadowColor="@color/text_shadow"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/takeAVitalImageView"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="15dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/take_a_vital"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:translationZ="4dp" />

                    </RelativeLayout>

                    <!--Blood Test-->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/conversation_menu_left_margin"
                        android:background="@drawable/round_outline"
                        android:outlineProvider="background">

                        <ImageView
                            android:id="@+id/bloodTestImageView"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_outline"
                            android:clickable="true"
                            android:outlineProvider="background"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_blood_test"
                            android:translationZ="3dp" />

                        <TextView
                            android:shadowColor="@color/text_shadow"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/bloodTestImageView"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="15dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/blood_test"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:translationZ="4dp" />

                    </RelativeLayout>

                    <!--Urine Examination-->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/conversation_menu_left_margin"
                        android:background="@drawable/round_outline"
                        android:outlineProvider="background">

                        <ImageView
                            android:id="@+id/urineExamImageView"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_outline"
                            android:clickable="true"
                            android:outlineProvider="background"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_urine_exam"
                            android:translationZ="3dp" />

                        <TextView
                            android:shadowColor="@color/text_shadow"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/urineExamImageView"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="15dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/urine_examination"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:translationZ="4dp" />

                    </RelativeLayout>

                    <!--Pain Management-->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/conversation_menu_left_margin"
                        android:background="@drawable/round_outline"
                        android:outlineProvider="background">

                        <ImageView
                            android:id="@+id/painManagementImageView"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_outline"
                            android:clickable="true"
                            android:outlineProvider="background"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_pain"
                            android:translationZ="3dp" />

                        <TextView
                            android:shadowColor="@color/text_shadow"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/painManagementImageView"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="15dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/pain_management"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:translationZ="4dp" />

                    </RelativeLayout>

                    <!--How to take a Medicine-->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/conversation_menu_left_margin"
                        android:background="@drawable/round_outline"
                        android:outlineProvider="background">

                        <ImageView
                            android:id="@+id/howToTakeAMedicineImageView"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_outline"
                            android:clickable="true"
                            android:outlineProvider="background"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_how_to_med"
                            android:translationZ="3dp" />

                        <TextView
                            android:shadowColor="@color/text_shadow"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/howToTakeAMedicineImageView"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="15dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/how_to_take_a_medicine"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:translationZ="4dp" />

                    </RelativeLayout>

                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>